Expanding a bit about Monte Carlo estimation as it seemed extremely bare bones before. Maybe I went overboard in the other direction, but this is what I wish someone had told me when I was learning about the topic.

--- a/references.bib
+++ b/references.bib
@@ -434,3 +434,17 @@
   pages={1--49},
   year={2022}
 }
+
+@article{paulin2015concentration,
+  title = {Concentration Inequalities for Markov Chains by Marton Couplings and Spectral Methods},
+  author = {Paulin, Daniel},
+  journal = {Electronic Journal of Probability},
+  volume = {20},
+  number = {79},
+  pages = {1--32},
+  year = {2015},
+  doi = {10.1214/EJP.v20-4039},
+  eprint = {1212.2015},
+  archivePrefix = {arXiv},
+  primaryClass = {math.PR}
+}
